add operate function

--- a/index.css
+++ b/index.css
@@ -2,8 +2,6 @@
     display: flex;
     width: 200;
     justify-content: flex-end;
-    /* flex-grow: 1; */
-    /* flex-direction: column; */
 }
 
 .inputs {
@@ -15,9 +13,10 @@
     width: 50px;
 }
 
-.back {
+.clear {
     display: flex;
     width: 50;
+    justify-content: center;
 }
 
 .display {
